@@ -3,9 +3,9 @@ Copyright and BSD License
 ---------------------
 
 Copyright (c) 2009, Lawrence Livermore National Security, LLC.
-Produced at the Lawrence Livermore National Laboratory
-Written by Adam Moody <moody20@llnl.gov>
-LLNL-CODE-411040
+Produced at the Lawrence Livermore National Laboratory.
+Written by Adam Moody <moody20@llnl.gov>.
+LLNL-CODE-411040.
 All rights reserved.
 This file is part of the PMGR_COLLECTIVE library.
 For details, see https://sourceforge.net/projects/pmgrcollective.
