@@ -1,6 +1,6 @@
 _vers=1.0
 PKG_NAME=pmgr_collective-${_vers}
-PKG_VERSION=1
+PKG_VERSION=2
 PKG_SECTION=tools
 PKG_SHORT_DESCRIPTION="PMGR_COLLECTIVE - A scalable protocol for bootstapping MPI, version ${_vers}"
 PKG_MAINTAINER="Adam Moody <moody20@llnl.gov>"
