@@ -1,8 +1,8 @@
 /*
  * Copyright (c) 2009, Lawrence Livermore National Security, LLC.
- * Produced at the Lawrence Livermore National Laboratory
- * Written by Adam Moody <moody20@llnl.gov>
- * LLNL-CODE-411039
+ * Produced at the Lawrence Livermore National Laboratory.
+ * Written by Adam Moody <moody20@llnl.gov>.
+ * LLNL-CODE-411040.
  * All rights reserved.
  * This file is part of the PMGR_COLLECTIVE library.
  * For details, see https://sourceforge.net/projects/pmgrcollective.
